--- a/contact.Rmd
+++ b/contact.Rmd
@@ -3,18 +3,8 @@
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-I'd love to hear from you, so feel free to reach out:
+Feel free to reach out to me at: <br>
 
-Memorial Sloan Kettering Cancer Center<br>
-485 Lexington Ave, 2nd floor<br>
-New York, NY 10017<br>
-646-888-8299<br>
-zabore@mskcc.org<br>
+simonpatrickcouch@gmail.com <br>
 
-Columbia University<br>
-Mailman School of Public Health<br>
-722 West 168th St, 6th floor<br>
-New York, NY 10032<br>
-ecz2108@cumc.columbia.edu<br>
-
-Or connect with me on GitHub, Twitter, or Linkedin (links in top right).
+Or connect with me on GitHub or Linkedin!
