clarify contact info :-)

--- a/contact.Rmd
+++ b/contact.Rmd
@@ -7,4 +7,4 @@ Feel free to reach out to me at: <br>
 
 simonpatrickcouch@gmail.com <br>
 
-Or connect with me on GitHub or Linkedin!
+Or connect with me on GitHub or Linkedin (links in top right)!
