--- a/README.Rmd
+++ b/README.Rmd
@@ -7,6 +7,6 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This repository contains source code for my website. 
+This repository contains source code for my personal [website](https://simonpcouch.github.io/). 
 
 Thanks for Emily Zabor for the super helpful [tutorial](https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html) on getting this up and running!
