--- a/projects.Rmd
+++ b/projects.Rmd
@@ -10,7 +10,7 @@
 *May 2018 -- Present*
 
 
-<img src="images/dpht.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> Since May 2018, I've worked in a research group on problems in database privacy. In particular, we're focusing on the potential of nonparametric approaches to differentially private hypothesis testing. Differential privacy is a subfield of database anonymization where researchers can access sensitive information in a database (e.g. medical records) by sending a query (in our case, to run a hypothesis test) and being returned a privatized output (in our case, a noisy test statistic). Centrally, my role is to evaluate the power of the tests that the group develops through simulation in R. Source code for these projects can be found [here](https://github.com/simonpcouch/non-pm-dpht) and [here](https://github.com/simonpcouch/wilcoxon), and a paper can be found [here](https://arxiv.org/abs/1809.01635). An early report on the research, "A Differentially Private Wilcoxon Signed-Rank Test", [tied for 1st prize](https://www.causeweb.org/usproc/usresp/2018/fall/winners) in the ASA-sponsored "Undergraduate Statistics Research Competition."
+<img src="images/dpht.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> Since May 2018, I've worked in a research group on problems in database privacy. In particular, we're focusing on the potential of nonparametric approaches to differentially private hypothesis testing. Differential privacy is a subfield of database anonymization where researchers can access sensitive information in a database (e.g. medical records) by sending a query (in our case, to run a hypothesis test) and being returned a privatized output (in our case, a noisy test statistic). Centrally, my role is to evaluate the power of the tests that the group develops through simulation in R. Source code for these projects can be found [here](https://github.com/simonpcouch/non-pm-dpht) and [here](https://github.com/simonpcouch/wilcoxon), and papers can be found [here](https://arxiv.org/abs/1809.01635) and [here](https://arxiv.org/abs/1903.09364). An early report on the research, "A Differentially Private Wilcoxon Signed-Rank Test", [tied for 1st prize](https://www.causeweb.org/usproc/usresp/2018/fall/winners) in the ASA-sponsored "Undergraduate Statistics Research Competition."
 
 <br>
 
