update jd timeline

--- a/index.Rmd
+++ b/index.Rmd
@@ -6,4 +6,4 @@ title: "Simon P. Couch - Home"
 
 <img src="images/simon.jpg" style="width:25%; border:3px solid; margin-right: 20px" align="left">
 
-I'm a sophomore statistics student at Reed College interested in data science, R development, machine learning, data visualization, statistical theory, differentially private hypothesis testing, and the use of these tools for social good. My current research focuses on privacy-preserving data analysis as well as applying statistical methods to quantify progress in equity of bikeshare programs. I also maintain some R software packages and work as a consultant to researchers at Reed to effectively utilize R and other data tools in their projects, and will be working for John Deere as a Data Science Intern in Summer 2019. Source code for many of my projects (including this website) is available on GitHub @simonpcouch!
+I'm a sophomore statistics student at Reed College interested in data science, R development, machine learning, data visualization, statistical theory, differentially private hypothesis testing, and the use of these tools for social good. My current research focuses on privacy-preserving data analysis as well as applying statistical methods to quantify progress in equity of bikeshare programs. I also maintain some R software packages and work as a consultant to researchers at Reed to effectively utilize R and other data tools in their projects, and am currently working for John Deere as a Data Science Intern. Source code for many of my projects (including this website) is available on GitHub @simonpcouch!
