--- a/cv.Rmd
+++ b/cv.Rmd
@@ -7,16 +7,22 @@ title: "Simon P. Couch - CV"
 ## Education
 **Reed College**  
 *Portland, Oregon* | *Expected Graduation May 2021*  
-•  B.A. in Mathematics with a Concentration in Statistics  
-•  Relevant Coursework: Statistics Practicum, Statistical Learning, Case Studies in Data Science, Probability and Statistics, Computer Science, Vector Calculus, Linear Algebra  
+•  B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology  
+•  Relevant Coursework: Statistics Practicum, Machine Learning, Data Science, Introduction to Probability and Statistics, Computer Science Fundamentals, Vector Calculus, Linear Algebra  
 
 <br>
 
 ## Technical Experience 
+**Data Science Intern** | *John Deere*  
+*Olathe, Kansas* | *May 2019 -- Present*  
+•	Design, implement, and maintain a suite of tools to validate data integrity of 12 automated business reports with a collective internal viewership of over 10,000 using Python, R, PostgreSQL, and Spark SQL  
+•	Construct 7 Tableau dashboards combining insights from 4 surveys conducted across time on similar topics, making use of reproducible R data tidying for future adaptability  
+•	Model geospatial customer behavior using ArcGIS Pro and Python  
+
 **Educational Technology Consultant** | *Reed College Technology Services*  
 *Portland, Oregon* | *December 2018 -- Present*  
 •	Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals  
-•	Implement expressive and reproducible R and Python programs to address analytical challenges
+•	Implement expressive and reproducible R and Python programs to address analytical challenges  
 
 **Researcher** | *Differentially Private Hypothesis Testing Group*  
 *Portland, Oregon* | *April 2018 -- Present*   
@@ -38,7 +44,9 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Publications 
-**Differentially Private Nonparametric Hypothesis Testing **| *Computer and Communications Security*  
+**Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity**| *arXiv*  
+*In Review* | *2019*  
+**Differentially Private Nonparametric Hypothesis Testing**| *Computer and Communications Security*  
 *London, United Kingdom* | *2019*  
 **A Differentially Private Wilcoxon Signed-Rank Test** | *arXiv*    
 *Online* | *2018*  
@@ -46,14 +54,14 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Skills 
-**R** *(Advanced)* | **Python** *(Intermediate)* | **Git & GitHub** *(Intermediate)* | **LaTeX** *(Intermediate)* | **SQL** *(Basic)*   
+**R** *(Advanced)* | **Python** *(Intermediate)* | **SQL** *(Intermediate)* | **Git & GitHub** *(Intermediate)* | **LaTeX** *(Intermediate)* | **ArcGIS** *(Basic)*
 
 <br>
 
 ## Additional Experience  
 **House Adviser** | *Reed College Residence Life *  
 *Portland, Oregon* | *August 2018 -- Present*  
-•	Build inclusive and active community for twelve residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring  
+•	Build inclusive and active community for 15 to 20 residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring  
 •	Coordinate and document 4 thoughtful dorm floor events per semester  
 •	Document room inventories, event outcomes, advising sessions, and other administrative tasks  
 
@@ -65,6 +73,10 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Honors & Awards    
+**Commendation for Excellence** | *Reed College President’s Office*  
+*Portland, Oregon* | *June 2018*, *June 2019*  
+Awarded to the top 5 percent of each class, based on school year GPA, annually 
+
 **1st Place---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
 *International* | *March 2019*  
 A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test”
@@ -73,13 +85,9 @@ A competition aiming to recognize research completed by undergraduates with exce
 *International* | *March 2019*  
 A competition centered on recognizing exceptional research completed as a class project for an undergraduate statistics course, judged on accuracy of analysis, clarity of presentation, originality, and practical significance. “A Geospatial Study of Bikeshare Station Locations,” a project aiming to quantify progress in bikeshare equity using machine learning methods, was awarded an honorable mention  
 
-**Commendation for Excellence** | *Reed College President’s Office*  
-*Portland, Oregon* | *May 2018*  
-Awarded to the top 5 percent of each class, based on school year GPA, annually  
-
 **All-State Academic Scholar** | *Lawrence Journal-World*  
 *De Soto, Kansas* | *June 2017*  
-An honor “meant to recognize the most promising high school senior [in Kansas]... based on their strong academics, extracurricular involvement,  and essays"  
+An honor “meant to recognize the most promising high school senior [in Kansas]... based on their strong academics, extracurricular involvement, and essays"  
 
 <br>
 
@@ -93,3 +101,4 @@ An honor “meant to recognize the most promising high school senior [in Kansas]
 **gbfs: Easily Interface with General Bikeshare Feed Specification Files** | *Case Studies in Data Science Colloquium*  
 *Portland, Oregon* | *May 2018*  
 
+<br>
