--- a/cv.Rmd
+++ b/cv.Rmd
@@ -8,16 +8,11 @@ title: "Simon P. Couch - CV"
 **Reed College**  
 *Portland, Oregon* | *Expected Graduation May 2021*  
 •  B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology  
-•  Relevant Coursework: Statistics Practicum, Machine Learning, Data Science, Introduction to Probability and Statistics, Computer Science Fundamentals, Vector Calculus, Linear Algebra  
+•  Relevant Coursework: Probability, Mathematical Statistics, Statistics Practicum, Machine Learning, Data Science, Deep Learning, Vector Calculus, Linear Algebra, Gender & Work, Science & Social Difference
 
 <br>
 
 ## Technical Experience 
-**Data Science Intern** | *John Deere*  
-*Olathe, Kansas* | *May 2019 -- Present*  
-•	Design, implement, and maintain a suite of tools to validate data integrity of 12 automated business reports with a collective internal viewership of over 10,000 using Python, R, PostgreSQL, and Spark SQL  
-•	Construct 7 Tableau dashboards combining insights from 4 surveys conducted across time on similar topics, making use of reproducible R data tidying for future adaptability  
-•	Model geospatial customer behavior using ArcGIS Pro and Python  
 
 **Educational Technology Consultant** | *Reed College Technology Services*  
 *Portland, Oregon* | *December 2018 -- Present*  
@@ -28,12 +23,24 @@ title: "Simon P. Couch - CV"
 *Portland, Oregon* | *April 2018 -- Present*   
 •	Write, optimize, test, and maintain large bodies of R code  
 •	Compose publication-quality manuscripts presenting findings thoughtfully and concisely  
-•	Collaborate on R and LaTeX code using Git and GitHub version control  
+•	Collaborate on R and LaTeX code using Git and GitHub version control 
+
+**Lab Assistant** | *Reed College Mathematics Department*  
+*Portland, Oregon* | *September 2019 -- Present*   
+•	Lead weekly lab sessions for two sets of 15 to 20 students in an introductory statistics course
+
+**Data Science Intern** | *John Deere*  
+*Olathe, Kansas* | *May 2019 -- August 2019*  
+•	Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter  
+•	Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS
+•	Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing
+Deere’s roadmap to agricultural autonomy 
 
 **R Developer** | *Reed College Mathematics Department*   
 *Portland, Oregon* | *December 2017 -- Present*   
 •	Write, optimize, test, and maintain expressive, concise, and computationally efficient code to assist R users in real-world problem solving  
-•	Publish two open-source software packages, “gbfs” and “anyflights,” in the Comprehensive R Archive Network  
+•	Contribute testing coverage and bug fixes to "infer," a CRAN-published R package allowing for tidyverse-friendly hypothesis testing
+•	Co-author and publish two open-source software packages, “gbfs” and “anyflights,” in the Comprehensive R Archive Network  
 
 **Analytics Intern** | *Kartini Clinic for Children & Families*  
 *Portland, Oregon* | *January 2018*  
@@ -54,7 +61,7 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Skills 
-**R** *(Advanced)* | **Python** *(Intermediate)* | **SQL** *(Intermediate)* | **Git & GitHub** *(Intermediate)* | **LaTeX** *(Intermediate)* | **ArcGIS** *(Basic)*
+**R** *(Advanced)* | **Python** *(Intermediate)* | **ArcGIS** *(Intermediate)* | **Tableau** *(Intermediate)* | **SQL** *(Intermediate)* | **Git & GitHub** *(Intermediate)* | **LaTeX** *(Intermediate)*  | **CSS** *(Basic)* | **Jupyter** *(Basic)*  
 
 <br>
 
@@ -64,6 +71,7 @@ title: "Simon P. Couch - CV"
 •	Build inclusive and active community for 15 to 20 residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring  
 •	Coordinate and document 4 thoughtful dorm floor events per semester  
 •	Document room inventories, event outcomes, advising sessions, and other administrative tasks  
+•	Advise two to three new House Advisers per year following appointment as House Adviser Mentor by peers and professional staff
 
 **Peer Career Adviser** | *Reed College Center for Life Beyond Reed*  
 *Portland, Oregon* | *August 2018 -- May 2019*  
@@ -73,6 +81,10 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Honors & Awards    
+**2st Place (tied)---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
+*International* | *September 2019*  
+A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity”
+
 **Commendation for Excellence** | *Reed College President’s Office*  
 *Portland, Oregon* | *June 2018*, *June 2019*  
 Awarded to the top 5 percent of each class, based on school year GPA, annually 
