--- a/cv.Rmd
+++ b/cv.Rmd
@@ -8,39 +8,42 @@ title: "Simon P. Couch - CV"
 **Reed College**  
 *Portland, Oregon* | *Expected Graduation May 2021*  
 •  B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology  
-•  Relevant Coursework: Probability, Mathematical Statistics, Statistics Practicum, Machine Learning, Data Science, Deep Learning, Vector Calculus, Linear Algebra, Gender & Work, Science & Social Difference
+•  Relevant Coursework: Probability, Statistics Practicum, Machine Learning, Data Science, Deep Learning, Vector Calculus, Linear Algebra, Gender & Work, Science & Social Difference
 
 <br>
 
 ## Technical Experience 
 
-**Educational Technology Consultant** | *Reed College Technology Services*  
+**Data Science Consultant** | *Reed College Instructional Technology Services*  
 *Portland, Oregon* | *December 2018 -- Present*  
 •	Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals  
 •	Implement expressive and reproducible R and Python programs to address analytical challenges  
 
-**Researcher** | *Differentially Private Hypothesis Testing Group*  
-*Portland, Oregon* | *April 2018 -- Present*   
-•	Write, optimize, test, and maintain large bodies of R code  
-•	Compose publication-quality manuscripts presenting findings thoughtfully and concisely  
-•	Collaborate on R and LaTeX code using Git and GitHub version control 
+**R Developer** | *Andrew Bray Ph.D.*  
+*Portland, Oregon* | *December 2017 -- Present*   
+•	Contribute new functionality, documentation, and testing coverage to *infer*, a widely used R package for mathematically rigorous hypothesis testing in the tidyverse framework  
+•	Develop and maintain two *Comprehensive R Archive Network*-published R packages, *anyflights* (no longer supported) and *gbfs*, to provide more comprehensive data querying infrastructure in R  
 
 **Lab Assistant** | *Reed College Mathematics Department*  
 *Portland, Oregon* | *September 2019 -- Present*   
 •	Lead weekly lab sessions for two sets of 15 to 20 students in an introductory statistics course
 
-**Data Science Intern** | *John Deere*  
+**Analytics Intern** | *John Deere*  
 *Olathe, Kansas* | *May 2019 -- August 2019*  
-•	Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter  
+•	Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter 
 •	Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS
-•	Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing
-Deere’s roadmap to agricultural autonomy 
+•	Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing Deere’s roadmap to agricultural autonomy   
 
-**R Developer** | *Reed College Mathematics Department*   
-*Portland, Oregon* | *December 2017 -- Present*   
-•	Write, optimize, test, and maintain expressive, concise, and computationally efficient code to assist R users in real-world problem solving  
-•	Contribute testing coverage and bug fixes to "infer," a CRAN-published R package allowing for tidyverse-friendly hypothesis testing
-•	Co-author and publish two open-source software packages, “gbfs” and “anyflights,” in the Comprehensive R Archive Network  
+**Researcher** | *Heather Kitada Smalley Ph.D.*  
+*Portland, Oregon* | *November 2018 -- September 2019*   
+•	Developed a novel querying approach to efficiently gather data from 73 bikeshare programs nationwide  
+•	Modeled spatial access to bikeshare services to understand the role of community demographics  
+
+**Researcher** | *Differential Privacy Group*  
+*Portland, Oregon* | *May 2018 -- July 2019*   
+•	Write, optimize, test, and maintain large bodies of R code  
+•	Compose publication-quality manuscripts presenting findings thoughtfully and concisely  
+•	Collaborate on R and LaTeX code using Git and GitHub version control 
 
 **Analytics Intern** | *Kartini Clinic for Children & Families*  
 *Portland, Oregon* | *January 2018*  
@@ -51,12 +54,13 @@ Deere’s roadmap to agricultural autonomy
 <br>
 
 ## Publications 
-**Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity**| *arXiv*  
-*In Review* | *2019*  
-**Differentially Private Nonparametric Hypothesis Testing**| *Computer and Communications Security*  
-*London, United Kingdom* | *2019*  
-**A Differentially Private Wilcoxon Signed-Rank Test** | *arXiv*    
-*Online* | *2018*  
+**Differentially Private Nonparametric Hypothesis Testing** *(2019)*  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   *ACM Conference on Computer and Communications Security* | *London, United Kingdom*     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  **Simon Couch**, Zeki Kazan, Kaiyan Shi, Andrew Bray, Adam Groce   
+**Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity** *(2019)*     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *arXiv Pre-print* | *In Review*   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  **Simon Couch**, Heather Kitada Smalley   
+
 
 <br>
 
