--- a/contact.Rmd
+++ b/contact.Rmd
@@ -4,8 +4,8 @@ title: "Simon P. Couch - Contact"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-Feel free to reach out to me at: <br>
+Feel free to reach out to me at: simonpatrickcouch@gmail.com <br>
 
-simonpatrickcouch@gmail.com <br>
+or connect with me on [GitHub](https://github.com/simonpcouch), [Twitter](https://twitter.com/simonpcouch) or [LinkedIn](https://www.linkedin.com/in/simonpcouch/) (links in top right, too)!
 
-Or connect with me on GitHub or Linkedin (links in top right)!
+I'm always glad to talk data science, statistics, and carrying more inclusive masculinities in these settings.
