--- a/cv.Rmd
+++ b/cv.Rmd
@@ -84,25 +84,29 @@ title: "Simon P. Couch - CV"
 <br>
 
 ## Honors & Awards    
+**Goldwater Nominee** | *Reed College*  
+*Portland, Oregon* | *November 2018, 2019*  
+One of four students chosen to represent Reed College as a nominee for the nationally competitive scholarship seeking "to identify and support college sophomores and juniors who show exceptional promise of becoming this Nation’s next generation of research leaders in these fields."  
+
 **2nd Place (tied)---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
 *International* | *September 2019*  
-A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity”  
+A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity.”   
 
 **Commendation for Excellence** | *Reed College President’s Office*    
 *Portland, Oregon* | *June 2018*, *June 2019*    
-Awarded to the top 5 percent of each class, based on school year GPA, annually  
+Awarded to the top 5 percent of each class, based on school year GPA, annually.   
 
 **1st Place (tied)---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
 *International* | *March 2019*  
-A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test”  
+A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test.”    
 
 **Honorable Mention---Undergraduate Statistics Class Project Competition** | *American Statistical Association*  
 *International* | *March 2019*  
-A competition centered on recognizing exceptional research completed as a class project for an undergraduate statistics course, judged on accuracy of analysis, clarity of presentation, originality, and practical significance. “A Geospatial Study of Bikeshare Station Locations,” a project aiming to quantify progress in bikeshare equity using machine learning methods, was awarded an honorable mention  
+A competition centered on recognizing exceptional research completed as a class project for an undergraduate statistics course, judged on accuracy of analysis, clarity of presentation, originality, and practical significance. “A Geospatial Study of Bikeshare Station Locations,” a project aiming to quantify progress in bikeshare equity using machine learning methods, was awarded an honorable mention.   
 
 **All-State Academic Scholar** | *Lawrence Journal-World*  
 *De Soto, Kansas* | *June 2017*  
-An honor “meant to recognize the most promising high school senior [in Kansas]... based on their strong academics, extracurricular involvement, and essays"  
+An honor “meant to recognize the most promising high school senior [in Kansas]... based on their strong academics, extracurricular involvement, and essays."    
 
 <br>
 
