--- a/projects.Rmd
+++ b/projects.Rmd
@@ -12,7 +12,7 @@ title: "Simon P. Couch - Projects"
 
 *September 2019 -- Present*
 
-<img src="images/infer.png" style="width:30%; margin-right: 20px" align="left"> I recently started working under Reed Associate Professor of Statistics Andrew Bray on the R package [infer](https://github.com/tidymodels/infer), providing a framework for hypothesis testing in the R *tidyverse* setting. Initially, I am focusing on documentation improvements, testing coverage, and bug fixes. We then hope to move on to revising the core verbs of the package and implementing new functionality.
+<img src="images/infer.png" style="width:30%; margin-right: 20px" align="left"> I work with Dr. Andrew Bray on the R package [infer](https://github.com/tidymodels/infer), providing a framework for hypothesis testing in the R *tidyverse* setting. More specifically, I work on fixing bugs, improving documentation (including help-files and vignettes), increasing testing coverage, and writing more informative error messages with the goal of the making the package more accessible and inclusive of all potential users.
 
 <br>
 
@@ -26,11 +26,23 @@ title: "Simon P. Couch - Projects"
 
 *January 2018 -- Present*
 
-<img src="images/gbfs.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> My collaborator Kaelyn Rosenberg and I initially built this tool as a class project in Case Studies in Data Science (MATH 241) at Reed College in Spring 2018. The [CRAN-published](https://cran.r-project.org/web/packages/gbfs/gbfs.pdf) R Package makes use of a standardized data format used by hundreds of bikeshare programs nationwide for releasing live information feeds on bikeshare dock station and bike information (e.g. the location of docks, current location of bikes on the road, number of available docks at a given dock, etc.) to provide a set of functions to easily query these .json feeds and convert them to rectangular R data. Source code for that project can be found [here](https://github.com/ds-civic-data/gbfs)!
+<img src="images/gbfs.png" style="width:35%; border:0px solid; margin-right: 20px" align="left"> My collaborator Kaelyn Rosenberg and I initially built this tool as a class project in Data Science (MATH 241) at Reed College in Spring 2018. The [CRAN-published](https://cran.r-project.org/web/packages/gbfs/gbfs.pdf) R Package makes use of a standardized data format used by hundreds of bikeshare programs worldwide for releasing live information feeds on bikeshare dock station and bike information (e.g. the location of docks, current location of bikes on the road, number of available docks at a given dock, etc.) to provide a set of functions to easily query these .json feeds and convert them to tidy R datasets. Source code for that project can be found [here](https://github.com/ds-civic-data/gbfs)!
 
 <br>
 
 <br>
+
+### Gendering Documentation
+
+*September 2019 -- Present*  
+
+Beginning as a term paper for Gender & Work (SOC 322) in Fall 2019, this project focuses on code documentation practices within R development communities. Through interviews with women in the field, as well as quantitative analyses utilizing web scraping and text mining methods, I argue that code documentation in the tidyverse is written more effectively and inclusively than other R code documentation, and that this is meaningful for understanding gender representation in the user community. R source code and paper drafts are available [here](https://github.com/simonpcouch/gendering_documentation)! This project is advised by Dr. Kjersten Whittington.   
+
+### Social Divisions in Data
+
+*September 2019 -- December 2019*  
+
+<img src="images/divs_in_data.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> This project was a term paper for Science and Social Difference (SOC 326) in Fall 2019. I argue that, rather than viewing datasets as unargumentative, sterile, or "raw," datasets express and reinforce the social conceptualizations held by their authors. More specifically, in this paper, I examine how sex, gender, race, and ethnicity are named and encoded as variables in data, and how this process is patterned by identities held by the datasets’ authors. R source code and the final paper are available [here](https://github.com/simonpcouch/social_divisions_in_data)! This project was advised by Dr. Kjersten Whittington.   
 
 <br>
 
@@ -47,11 +59,11 @@ title: "Simon P. Couch - Projects"
 *May 2018 -- July 2019*
 
 
-<img src="images/dpht.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> The summer after my first year at Reed, I worked full-time in a research group on database privacy. In particular, we focused on the potential of nonparametric approaches to differentially private hypothesis testing. Differential privacy is a subfield of database anonymization where researchers can access sensitive information in a database (e.g. medical records) by sending a query (in our case, to run a hypothesis test) and being returned a privatized output (in our case, a noisy test statistic). Centrally, my role was to evaluate the power of the tests that the group developed through simulation in R. Source code for these projects can be found [here](https://github.com/simonpcouch/non-pm-dpht) and [here](https://github.com/simonpcouch/wilcoxon), and papers can be found [here](https://arxiv.org/abs/1809.01635) and [here](https://arxiv.org/abs/1903.09364). An early report on the research, "A Differentially Private Wilcoxon Signed-Rank Test", [tied for 1st prize](https://www.causeweb.org/usproc/usresp/2018/fall/winners) in the ASA-sponsored "Undergraduate Statistics Research Competition," and we were recently accepted to the Proceedings of the 2019 ACM Conference on Computer and Communications Security in London!
+<img src="images/dpht.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> The summer after my first year at Reed, I worked full-time in a research group on database privacy. In particular, we focused on the potential of nonparametric approaches to differentially private hypothesis testing. Differential privacy is a subfield of database anonymization where researchers can access sensitive information in a database (e.g. medical records) by sending a query (in our case, to run a hypothesis test) and being returned a privatized output (in our case, a noisy test statistic). An early report on the research, "A Differentially Private Wilcoxon Signed-Rank Test", [tied for 1st prize](https://www.causeweb.org/usproc/usresp/2018/fall/winners) in the ASA-sponsored "Undergraduate Statistics Research Competition," and our [final report](https://dl.acm.org/citation.cfm?id=3339821) on this work, for which I am primary author, was published in the Proceedings of the 2019 ACM Conference on Computer and Communications Security! All R source code implementing our algorithms is freely available [here](https://github.com/simonpcouch/non-pm-dpht).
 
 <br>
 
-### An Alternative to Rank-Based College Exploration 
+### An Alternative to Rankings-Based College Exploration 
 
 *January 2019 -- May 2019*
 
